--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
     sdk: flutter
   bloc: ^8.1.4
   salomon_bottom_bar: ^3.3.2
+  image_picker: ^1.0.8
 
 dev_dependencies:
   flutter_test:
