--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,44 +1,51 @@
 {
-    "editor.tokenColorCustomizations": {
-  //   "comments": "#2fd479",
-  //   "variables": "#cdb4db",
-  //   "types": "#fa82b0",
-  //   "strings": "#ffafcc",
-  //   "numbers": "#bde0fe",
-  //   "functions": "#a2d2ff",
-  //   "keywords": "#54abfc",
+  "editor.tokenColorCustomizations": {
+    //   "comments": "#2fd479",
+    //   "variables": "#cdb4db",
+    //   "types": "#fa82b0",
+    //   "strings": "#ffafcc",
+    //   "numbers": "#bde0fe",
+    //   "functions": "#a2d2ff",
+    //   "keywords": "#54abfc",
     "textMateRules": [
-  //     { // operators like =,+
-  //       "scope": "keyword.operator",
-  //       "settings": {
-  //         "foreground": "#f9aaff",
-  //       }
-  //     },
-      { // parameter
-        "scope": "variable.parameter",
-        "settings": {
-          "foreground": "#ffafcc"
-        }
-      },
-      {
-        "scope": "support.class",
-        "settings": {
-          "foreground": "#edcfff"
-        }
-      },
-      {
-        "scope": "entity.name.type.class",
-        "settings": {
-          "foreground": "#edcfff"
-        }
-      }
-  //     { // inherited class name (ctk.CTkFrame)
-  //       "scope": "entity.other.inherited-class",
-  //       "settings": {
-  //         "foreground": "#ffc8dd"
-  //       }
-  //     }
+      //     { // operators like =,+
+      //       "scope": "keyword.operator",
+      //       "settings": {
+      //         "foreground": "#f9aaff",
+      //       }
+      //     },
+      // {
+      //   "scope": "comment",
+      //   "settings": {
+      //     "fontStyle": "italic"
+      //   }
+      // },
+      // { // parameter
+      //   "scope": "variable.parameter",
+      //   "settings": {
+      //     "foreground": "#f885af",
+      //   }
+      // },
+      // {
+      //   "scope": "support.class",
+      //   "settings": {
+      //     "foreground": "#edcfff"
+      //   }
+      // },
+      // {
+      //   "scope": "entity.name.type.class",
+      //   "settings": {
+      //     "foreground": "#e8c9fa"
+      //   }
+      // }
+      //     { // inherited class name (ctk.CTkFrame)
+      //       "scope": "entity.other.inherited-class",
+      //       "settings": {
+      //         "foreground": "#ffc8dd"
+      //       }
+      //     }
     ]
   },
-  "workbench.colorCustomizations": {}
+  "workbench.colorCustomizations": {},
+  "cSpell.words": ["تعليقاً"]
 }
