--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   bloc: ^8.1.4
   salomon_bottom_bar: ^3.3.2
   image_picker: ^1.0.8
+  persistent_bottom_nav_bar: ^6.2.1
 
 dev_dependencies:
   flutter_test:
