--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   salomon_bottom_bar: ^3.3.2
   image_picker: ^1.0.8
   persistent_bottom_nav_bar: ^6.2.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
