--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^1.0.8
   persistent_bottom_nav_bar: ^6.2.1
   intl: ^0.18.1
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
